// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CarrierLogo Four carriers 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Four carriers
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Carrier logo displays one or more logos of transport carriers. It is usually together with the travel itinerary. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={Object {}}
        >
          <div
            className="jsx-3959991045"
          >
            <img
              alt="Ryanair"
              className="jsx-3959991045"
              src="//images.kiwi.com/airlines/16/FR.png"
              srcSet="//images.kiwi.com/airlines/32/FR.png 2x"
              title="Ryanair"
            />
            <img
              alt="Transavia France"
              className="jsx-3959991045"
              src="//images.kiwi.com/airlines/16/TO.png"
              srcSet="//images.kiwi.com/airlines/32/TO.png 2x"
              title="Transavia France"
            />
            <img
              alt="Vueling"
              className="jsx-3959991045"
              src="//images.kiwi.com/airlines/16/VY.png"
              srcSet="//images.kiwi.com/airlines/32/VY.png 2x"
              title="Vueling"
            />
            <img
              alt="Czech Airlines"
              className="jsx-3959991045"
              src="//images.kiwi.com/airlines/16/OK.png"
              srcSet="//images.kiwi.com/airlines/32/OK.png 2x"
              title="Czech Airlines"
            />
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                  style={undefined}
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        CarrierLogo
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            carriers
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                [
                                <span>
                                  <span>
                                    <br />
                                      
                                      
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        code
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'FR'
                                    </span>
                                    ,
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        name
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'Ryanair'
                                    </span>
                                    }
                                  </span>
                                </span>
                                ,
                                <span>
                                  <span>
                                    <br />
                                      
                                      
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        code
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'TO'
                                    </span>
                                    ,
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        name
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'Transavia France'
                                    </span>
                                    }
                                  </span>
                                </span>
                                ,
                                <span>
                                  <span>
                                    <br />
                                      
                                      
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        code
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'VY'
                                    </span>
                                    ,
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        name
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'Vueling'
                                    </span>
                                    }
                                  </span>
                                </span>
                                ,
                                <span>
                                  <span>
                                    <br />
                                      
                                      
                                  </span>
                                  …
                                </span>
                                <span>
                                  <br />
                                    
                                </span>
                                ]
                              </span>
                              }
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-gydez8"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CarrierLogo One carrier 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          One carrier
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Carrier logo displays one or more logos of transport carriers. It is usually together with the travel itinerary. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={Object {}}
        >
          <div
            className="jsx-1883173957"
          >
            <img
              alt="Ryanair"
              className="jsx-1883173957"
              src="//images.kiwi.com/airlines/32/FR.png"
              srcSet="//images.kiwi.com/airlines/64/FR.png 2x"
              title="Ryanair"
            />
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                  style={undefined}
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        CarrierLogo
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            carriers
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                [
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        code
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'FR'
                                    </span>
                                    ,
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        name
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'Ryanair'
                                    </span>
                                    }
                                  </span>
                                </span>
                                ]
                              </span>
                              }
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-gydez8"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CarrierLogo Three carriers 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Three carriers
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Carrier logo displays one or more logos of transport carriers. It is usually together with the travel itinerary. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={Object {}}
        >
          <div
            className="jsx-3959991045"
          >
            <img
              alt="Ryanair"
              className="jsx-3959991045"
              src="//images.kiwi.com/airlines/16/FR.png"
              srcSet="//images.kiwi.com/airlines/32/FR.png 2x"
              title="Ryanair"
            />
            <img
              alt="Transavia France"
              className="jsx-3959991045"
              src="//images.kiwi.com/airlines/16/TO.png"
              srcSet="//images.kiwi.com/airlines/32/TO.png 2x"
              title="Transavia France"
            />
            <img
              alt="Vueling"
              className="jsx-3959991045"
              src="//images.kiwi.com/airlines/16/VY.png"
              srcSet="//images.kiwi.com/airlines/32/VY.png 2x"
              title="Vueling"
            />
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                  style={undefined}
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        CarrierLogo
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            carriers
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                [
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        code
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'FR'
                                    </span>
                                    ,
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        name
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'Ryanair'
                                    </span>
                                    }
                                  </span>
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        code
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'TO'
                                    </span>
                                    ,
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        name
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'Transavia France'
                                    </span>
                                    }
                                  </span>
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        code
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'VY'
                                    </span>
                                    ,
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        name
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'Vueling'
                                    </span>
                                    }
                                  </span>
                                </span>
                                ]
                              </span>
                              }
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-gydez8"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CarrierLogo Two carriers 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Two carriers
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Carrier logo displays one or more logos of transport carriers. It is usually together with the travel itinerary. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={Object {}}
        >
          <div
            className="jsx-3959991045"
          >
            <img
              alt="Ryanair"
              className="jsx-3959991045"
              src="//images.kiwi.com/airlines/16/FR.png"
              srcSet="//images.kiwi.com/airlines/32/FR.png 2x"
              title="Ryanair"
            />
            <img
              alt="Transavia France"
              className="jsx-3959991045"
              src="//images.kiwi.com/airlines/16/TO.png"
              srcSet="//images.kiwi.com/airlines/32/TO.png 2x"
              title="Transavia France"
            />
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                  style={undefined}
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        CarrierLogo
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            carriers
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                [
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        code
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'FR'
                                    </span>
                                    ,
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        name
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'Ryanair'
                                    </span>
                                    }
                                  </span>
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        code
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'TO'
                                    </span>
                                    ,
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        name
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'Transavia France'
                                    </span>
                                    }
                                  </span>
                                </span>
                                ]
                              </span>
                              }
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-gydez8"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
